# python-api-projects

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
blogging-api/: README.md  app.py  auth.py  database.py  models.py
blogging-api/tests/: test_api.py  test_auth.py
broadcast-server/: README.md  client.py  server.py
caching-proxy/: Dockerfile  Makefile  README.md  cache.py  docker-compose.yml  proxy.py
caching-proxy/tests/: test_proxy.py
ecommerce-api/: README.md  app.py  database.py  models.py
ecommerce-api/routes/: cart.py  orders.py  products.py
ecommerce-api/services/: payment.py
ecommerce-api/tests/: test_products.py
expense-api/: Makefile  README.md  app.py  database.py  models.py  reports.py
expense-api/tests/: test_api.py
image-processing/: app.py  processor.py
markdown-notes/: app.py  renderer.py
shared/: error_handlers.py  logging_config.py
todo-api/: Dockerfile  README.md  app.py  database.py  docker-compose.yml  models.py
todo-api/tests/: test_api.py
url-shortener/: analytics.py  app.py  shortener.py
url-shortener/tests/: test_api.py
weather-api/: Dockerfile  README.md  app.py  app_fastapi.py  config.py  docker-compose.yml
weather-api/tests/: conftest.py  test_api.py
workout-tracker/: README.md  app.py  models.py  routes.py
workout-tracker/tests/: test_api.py
