[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "migrations/"]

[[tool.mypy.overrides]]
module = ["flask.*", "sqlalchemy.*", "redis.*", "stripe.*", "markdown2.*"]
ignore_missing_imports = true
